# grgg

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  dvc.yaml  environment.yaml  noxfile.py  params.yaml  pyproject.toml
.github/: copilot-instructions.md
analyses/: regimes_spherical.py  sanity_checks.py  spherical.py  tutorial.ipynb
analyses/random_graphs/: importance_sampling.py  monte_carlo.py
data/: .gitignore
grgg/: __about__.py  __init__.py  _model.py  _options.py  _typing.py  abc.py  functions.py  indexing.py  integrate.py  kernels.py  layers.py  lazy.py  manifolds.py  model.py  optimize.py  parameters.py  project.py  qmc.py  quantize.py  random.py  utils.py
grgg/_geometric/abc/: __init__.py
grgg/_geometric/grgg/: __init__.py  _sampling.py  _views.py  model.py
grgg/_geometric/grgg/integrals/: __init__.py  probs.py
grgg/_utils/: discretizers.py  functions.py
grgg/abc/: __init__.py  modules.py
grgg/manifolds/: functions.py  manifold.py  sphere.py
grgg/model/: __init__.py  _indexing.py  _lazy.py  _model.py  _pairs.py  _quantizer.py  _sampling.py  _typing.py  _utils.py  _views.py  abc.py  functions.py  grgg.py  layers.py  model.py  parameters.py
grgg/model/equations/: abc.py  degree.py  probability.py
grgg/model/grgg/: __init__.py  grgg.py  quantized.py
grgg/model/integrals/: __init__.py  abc.py  degree.py  probs.py  tclust.py
grgg/model/manifolds/: __init__.py  manifold.py  sphere.py
grgg/models/: __init__.py
grgg/models/abc/: __init__.py  fitting.py  functions.py  model.py  models.py  modules.py  optimize.py  parameters.py  sampling.py  views.py
grgg/models/base/: observables.py  traits.py
grgg/models/base/ergm/: __init__.py  fitting.py  functions.py  model.py  motifs.py  views.py
grgg/models/base/model/: __init__.py  fitting.py  functions.py  model.py  modules.py  parameters.py  sampling.py  views.py
grgg/models/base/random_graphs/: __init__.py  functions.py  model.py  parameters.py  views.py
grgg/models/ergm/abc/: __init__.py  fitting.py  functions.py  model.py  models.py  motifs.py  optimize.py  parameters.py  sampling.py  views.py
grgg/models/ergm/geometric/: __init__.py
grgg/models/ergm/geometric/abc/: models.py
grgg/models/ergm/geometric/grgg/: _sampling.py  _views.py  functions.py  layers.py  model.py  parameters.py  quantized.py
grgg/models/ergm/geometric/grgg/integrals/: abc.py  degree.py  tclust.py
grgg/models/ergm/random_graphs/: __init__.py
grgg/models/ergm/random_graphs/abc/: __init__.py  functions.py  model.py  models.py  motifs.py  parameters.py  sampling.py  views.py
grgg/models/ergm/random_graphs/undirected/: __init__.py  fitting.py  functions.py  model.py  sampling.py
grgg/models/ergm/random_graphs/undirected/abc/: __init__.py  functions.py  models.py  parameters.py  views.py  (+1 more)
grgg/models/parameters/: __init__.py  constraints.py  parameters.py
grgg/models/random_graph/: __init__.py  functions.py  model.py
grgg/models/random_graph/views/nodes/: __init__.py  _complementarity.py  _degree.py  _qclosure.py  _qclust.py  _similarity.py  _tclosure.py  nodes.py
grgg/models/random_graph/views/pairs/: __init__.py  pairs.py
grgg/project/: __init__.py  plotting.py
grgg/statistics/: __init__.py  _iteration.py  abc.py  complementarity.py  degree.py  edge_count.py  motifs.py  qclosure.py  qclust.py  qstats.py  similarity.py  structure.py  tclosure.py  tclust.py  tstats.py
grgg/statistics/motifs/: __init__.py  abc.py  qhead.py  quadrangle.py  qwedge.py  thead.py  triangle.py  twedge.py
grgg/utils/: __init__.py  _indexing.py  compute.py  containers.py  discretizer.py  discretizers.py  dispatch.py  dotpath.py  functions.py  indexing.py  integrate.py  lazy.py  misc.py  quantize.py  random.py  validation.py
grgg/utils/variables/: __init__.py  bundle.py  constraints.py  variable.py
scripts/: simulate_regimes_spherical.py  simulate_simcomp_spherical.py  simulate_spherical.py
tests/: conftest.py  test_grgg.py  test_quantize.py  test_similarity.py
(+59 files in other folders)
